Fix navbar break on mobile

--- a/public/stylesheets/scss/main.scss
+++ b/public/stylesheets/scss/main.scss
@@ -43,7 +43,7 @@ body {
 	outline: 1px none;
 }
 .navbar-light .navbar-toggler-icon {
-	background-image: url('/images/toggler.png');
+	background-image: url('/images/toggler.svg');
 }
 .form-control:focus {
 	border-color: $grey;
@@ -59,9 +59,9 @@ body {
 	color: white;
 }
 .rotate {
-	-moz-transition: all .5s linear;
-	-webkit-transition: all .5s linear;
-	transition: all .5s linear;
+	-moz-transition: all .3s linear;
+	-webkit-transition: all .3s linear;
+	transition: all .3s linear;
 }
 .rotate.down {
 	-moz-transform: rotate(180deg);
@@ -80,8 +80,10 @@ button.navbar-toggler:focus {
 
 .navbar-toggler-icon {
 	position: relative;
-	top: 12px;
-	left: -12px;
+	top: 15px;
+	left: -8px;
+	width: 1.2rem;
+	height: 1.2rem;
 }
 
 .nav-link {
@@ -95,6 +97,7 @@ button.navbar-toggler:focus {
 }
 .form-group.has-search {
 	margin-bottom: 0;
+	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1) !important;
 }
 
 .has-search .form-control {
